--- a/src/pages/Login.scss
+++ b/src/pages/Login.scss
@@ -70,6 +70,11 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        cursor: pointer;
+
+        &:hover {
+          background-color: $blackColor;
+        }
 
         p {
           color: $whiteColor;
